fix nav1 in "hero-section) on small screen

--- a/app/styles/_hero.scss
+++ b/app/styles/_hero.scss
@@ -14,18 +14,29 @@
   justify-content: space-between;
   height: 130px;
   align-items: center;
+  @include M {
+    justify-content: flex-start;
+    height: 60px;
+  }
   &__logos {
     cursor: pointer;
     padding: 15px 0 0 30px;
+    @include XS {
+      padding: 10px 0 0 10px;
+    }
   }
   &__logo {
     @include XL {
       width: 178px;
-      height:61px;
+      height: auto;
     }
     @include L {
       width: 119px;
-      height: 41px;
+      height: auto;
+    }
+    @include XS {
+      width: 90px;
+      height: auto;
     }
   }
   &__logo--scrolled {
@@ -47,6 +58,7 @@
   margin-top: 10px;
   @include M {
     flex-direction: column;
+    align-items: flex-start;
   }
   &__arrow {
     background: url(../images/down-arrow-white.svg);
@@ -61,6 +73,14 @@
       transform: rotate(180deg);
       transition: 1s;
     }
+    @include M {
+      position: absolute;
+      top: 18px;
+      right: 31px;
+    }
+    @include XS {
+      top: 60px;
+    }
   }
   &__item {
     display: inline-block;
@@ -69,6 +89,10 @@
     padding-left: 15px;
     border-right: 1px solid #fff;
     transition: all 0.3s ease;
+    @include M {
+      padding: 0 15px;
+      border-right: none;
+    }
     &:hover {
       border-bottom: 2px solid $orange;
       padding-bottom: 2px;
@@ -79,12 +103,24 @@
       background-position: 0;
       background-repeat: no-repeat;
       background-size: 14px;
-      padding-left: 30px
+      padding-left: 30px;
+      @include M {
+        padding: 0 15px;
+      }
     }
     &--flag {
       margin-left: 15px;
       padding-right: 10px;
       cursor: pointer;
+      @include M {
+        position: absolute;
+        right: 70px;
+        top: 9px;
+      }
+      @include XS {
+        top: 50px;
+        right: 0;
+      }
     }
   }
 }
@@ -96,10 +132,17 @@
   align-items: center;
   cursor: pointer;
   transition: all 0.3s ease;
+  @include M {
+    padding: 0 15px;
+    background: none;
+  }
   &__text {
   }
   &__image {
     padding-left: 10px;
+    @include M {
+      display: none;
+    }
   }
   &:hover {
     box-shadow: inset 0 0 0 25px lighten($orange, 5%);
@@ -122,6 +165,9 @@
     height: 100px;
     top: 34px;
     transition: 1s;
+    @include M {
+      top: 0;
+    }
   }
   &--inactive {
 
@@ -208,13 +254,16 @@
   width: 35px;
   height: 40px;
   opacity: 0.8;
-  right: 8px;
+  right: 10px;
   top: 10px;
   z-index: 7;
   display: none;
   cursor: pointer;
   @include M {
     display: block;
+  }
+  @include XS {
+    right: 15px;
   }
   &:hover {
     opacity: 0.6;
@@ -279,8 +328,13 @@
       line-height: 30px;
     }
     @include S {
+      padding-top: 60px;
       font-size: 26px;
       line-height: 26px;
+    }
+    @include XS {
+      font-size: 22px;
+      line-height: 22px;
     }
   }
   &__subheading {
@@ -301,6 +355,10 @@
     @include S {
       font-size: 16px;
       line-height: 16px;
+    }
+    @include XS {
+      font-size: 14px;
+      line-height: 14px;
     }
   }
   &__link {
